--- a/Spam_detection_No_ML_lib.ipynb
+++ b/Spam_detection_No_ML_lib.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -119,7 +119,7 @@
        "9    ham                                              Ok..."
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -336,48 +336,16 @@
     "## 6 - Use the Naive Bayes theorem to build and fit a model from the training data\n",
     "\n",
     "We are trying to evaluate the probability of an email being a Spam or Ham depending on the words in the text :\n",
-    "![title](formulas.png)"
+    "![title](formulas.png)\n",
+    "\n",
+    "The Laplace smoothing technique has been used in ordrer to make sure that the 0 values are taken care of."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      Index            Word  N_S  N_H  N_H/N_tot_H  N_S/N_tot_S  Total_ham  \\\n",
-      "0         0              to  271  742     0.244730     0.581197   0.212146   \n",
-      "1         1             you  103  686     0.226285     0.222222   0.196156   \n",
-      "2         2             the   96  513     0.169302     0.207265   0.146760   \n",
-      "3         3             and   60  361     0.119236     0.130342   0.103360   \n",
-      "4         4              in   33  410     0.135375     0.072650   0.117351   \n",
-      "...     ...             ...  ...  ...          ...          ...        ...   \n",
-      "2995   2995             Lil    0    1     0.000659     0.002137   0.000571   \n",
-      "2996   2996         Thinkin    0    1     0.000659     0.002137   0.000571   \n",
-      "2997   2997         showers    0    1     0.000659     0.002137   0.000571   \n",
-      "2998   2998  possessiveness    0    1     0.000659     0.002137   0.000571   \n",
-      "2999   2999          poured    0    1     0.000659     0.002137   0.000571   \n",
-      "\n",
-      "      Total_spam  \n",
-      "0       0.077382  \n",
-      "1       0.029587  \n",
-      "2       0.027596  \n",
-      "3       0.017354  \n",
-      "4       0.009673  \n",
-      "...          ...  \n",
-      "2995    0.000284  \n",
-      "2996    0.000284  \n",
-      "2997    0.000284  \n",
-      "2998    0.000284  \n",
-      "2999    0.000284  \n",
-      "\n",
-      "[3000 rows x 8 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from collections import Counter\n",
@@ -426,15 +394,218 @@
     "        df_model.iloc[i,7] = (df_model.iloc[i,5])*(proba_spam)\n",
     "    return df_model\n",
     "                            \n",
-    "model = build_model(extract_feats_train,df_train['Status'],training_dict)\n",
-    "print(model)"
+    "model = build_model(extract_feats_train,df_train['Status'],training_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Index</th>\n",
+       "      <th>Word</th>\n",
+       "      <th>N_S</th>\n",
+       "      <th>N_H</th>\n",
+       "      <th>N_H/N_tot_H</th>\n",
+       "      <th>N_S/N_tot_S</th>\n",
+       "      <th>Total_ham</th>\n",
+       "      <th>Total_spam</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>to</td>\n",
+       "      <td>271</td>\n",
+       "      <td>742</td>\n",
+       "      <td>0.244730</td>\n",
+       "      <td>0.581197</td>\n",
+       "      <td>0.212146</td>\n",
+       "      <td>0.077382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>you</td>\n",
+       "      <td>103</td>\n",
+       "      <td>686</td>\n",
+       "      <td>0.226285</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>0.196156</td>\n",
+       "      <td>0.029587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>the</td>\n",
+       "      <td>96</td>\n",
+       "      <td>513</td>\n",
+       "      <td>0.169302</td>\n",
+       "      <td>0.207265</td>\n",
+       "      <td>0.146760</td>\n",
+       "      <td>0.027596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>and</td>\n",
+       "      <td>60</td>\n",
+       "      <td>361</td>\n",
+       "      <td>0.119236</td>\n",
+       "      <td>0.130342</td>\n",
+       "      <td>0.103360</td>\n",
+       "      <td>0.017354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>in</td>\n",
+       "      <td>33</td>\n",
+       "      <td>410</td>\n",
+       "      <td>0.135375</td>\n",
+       "      <td>0.072650</td>\n",
+       "      <td>0.117351</td>\n",
+       "      <td>0.009673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2995</th>\n",
+       "      <td>2995</td>\n",
+       "      <td>Lil</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000659</td>\n",
+       "      <td>0.002137</td>\n",
+       "      <td>0.000571</td>\n",
+       "      <td>0.000284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2996</th>\n",
+       "      <td>2996</td>\n",
+       "      <td>Thinkin</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000659</td>\n",
+       "      <td>0.002137</td>\n",
+       "      <td>0.000571</td>\n",
+       "      <td>0.000284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2997</th>\n",
+       "      <td>2997</td>\n",
+       "      <td>showers</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000659</td>\n",
+       "      <td>0.002137</td>\n",
+       "      <td>0.000571</td>\n",
+       "      <td>0.000284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2998</th>\n",
+       "      <td>2998</td>\n",
+       "      <td>possessiveness</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000659</td>\n",
+       "      <td>0.002137</td>\n",
+       "      <td>0.000571</td>\n",
+       "      <td>0.000284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2999</th>\n",
+       "      <td>2999</td>\n",
+       "      <td>poured</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000659</td>\n",
+       "      <td>0.002137</td>\n",
+       "      <td>0.000571</td>\n",
+       "      <td>0.000284</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3000 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Index            Word  N_S  N_H  N_H/N_tot_H  N_S/N_tot_S  Total_ham  \\\n",
+       "0         0              to  271  742     0.244730     0.581197   0.212146   \n",
+       "1         1             you  103  686     0.226285     0.222222   0.196156   \n",
+       "2         2             the   96  513     0.169302     0.207265   0.146760   \n",
+       "3         3             and   60  361     0.119236     0.130342   0.103360   \n",
+       "4         4              in   33  410     0.135375     0.072650   0.117351   \n",
+       "...     ...             ...  ...  ...          ...          ...        ...   \n",
+       "2995   2995             Lil    0    1     0.000659     0.002137   0.000571   \n",
+       "2996   2996         Thinkin    0    1     0.000659     0.002137   0.000571   \n",
+       "2997   2997         showers    0    1     0.000659     0.002137   0.000571   \n",
+       "2998   2998  possessiveness    0    1     0.000659     0.002137   0.000571   \n",
+       "2999   2999          poured    0    1     0.000659     0.002137   0.000571   \n",
+       "\n",
+       "      Total_spam  \n",
+       "0       0.077382  \n",
+       "1       0.029587  \n",
+       "2       0.027596  \n",
+       "3       0.017354  \n",
+       "4       0.009673  \n",
+       "...          ...  \n",
+       "2995    0.000284  \n",
+       "2996    0.000284  \n",
+       "2997    0.000284  \n",
+       "2998    0.000284  \n",
+       "2999    0.000284  \n",
+       "\n",
+       "[3000 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6 - Use the model to make predictions for the test data."
+    "## 6 - Use the model to make predictions for the test data.\n",
+    "\n",
+    "The log probability has been used in order to get best prediction for the spam detection. Once the log probability is computed for both classes, the argmax function has been used to determine which one is the highest."
    ]
   },
   {
@@ -467,7 +638,6 @@
     "    log_prob_per_classs = np.array(model.iloc[0,6], model.iloc[0,7])\n",
     "    \n",
     "    for x in extract_feats:\n",
-    "        # predict_vector = (np.log(tot) * x + log_prob_per_class ).sum(axis=1)    \n",
     "        predict_vector = (np.log(tot) * x + np.log(1 - tot) * np.abs(x - 1)).sum(axis=1) + log_prob_per_classs\n",
     "        matrix.append(predict_vector)\n",
     "    return matrix\n",
@@ -497,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -553,13 +723,6 @@
     "print(\"Recall :\",recall)\n",
     "print(\"F1-Score :\",f1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
