--- a/Spam_detection_Sklearn.ipynb
+++ b/Spam_detection_Sklearn.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -119,7 +119,7 @@
        "9    ham                                              Ok..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -333,25 +333,118 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6 - Use the model to make predictions for the test data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 7 - Measure the spam-filtering performance through the confusion matrix from the Sklearn library."
+    "## 6 - Use the Bernouilli Naive Bayes from sklearn to make predictions for the test data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Prediction_results from the Bernouilli Naive Bayes :\n",
+      "Number of spams : 168\n",
+      "Number of hams : 1332\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import BernoulliNB\n",
+    "import numpy as np\n",
+    "model_bernouilli = BernoulliNB()\n",
+    "model_bernouilli.fit(extract_feats_train, df_train['Status'])\n",
+    "prediction_results_bernouilli = model_bernouilli.predict(extract_feats_test)\n",
+    "print(\"Prediction_results from the Bernouilli Naive Bayes :\")\n",
+    "print(\"Number of spams :\",np.count_nonzero(prediction_results_bernouilli == 1))\n",
+    "print(\"Number of hams :\",np.count_nonzero(prediction_results_bernouilli == 0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7 - Use the Multinomial Naive Bayes from sklearn to make predictions for the test data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction_results from the Multinomial Naive Bayes :\n",
+      "Number of spams : 191\n",
+      "Number of hams : 1309\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "model_multinomial = MultinomialNB()\n",
+    "model_multinomial.fit(extract_feats_train, df_train['Status'])\n",
+    "prediction_results_multi = model_multinomial.predict(extract_feats_test)\n",
+    "print(\"Prediction_results from the Multinomial Naive Bayes :\")\n",
+    "print(\"Number of spams :\",np.count_nonzero(prediction_results_multi == 1))\n",
+    "print(\"Number of hams :\",np.count_nonzero(prediction_results_multi == 0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8 - Measure the spam-filtering performance of both models through the confusion matrix from the Sklearn library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metrics and Confusion matrix from the Multinomial Naive Bayes :\n",
+      "[[1284   10]\n",
+      " [  25  181]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      0.99      0.99      1294\n",
+      "           1       0.95      0.88      0.91       206\n",
+      "\n",
+      "    accuracy                           0.98      1500\n",
+      "   macro avg       0.96      0.94      0.95      1500\n",
+      "weighted avg       0.98      0.98      0.98      1500\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fait avec sklearn pour comparer\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "print(\"Metrics and Confusion matrix from the Multinomial Naive Bayes :\")\n",
+    "print(confusion_matrix(df_test['Status'], prediction_results_multi))\n",
+    "print (metrics.classification_report(df_test['Status'], prediction_results_multi))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metrics and Confusion matrix from the Bernouilli Naive Bayes :\n",
       "[[1293    1]\n",
       " [  39  167]]\n",
       "              precision    recall  f1-score   support\n",
@@ -367,34 +460,10 @@
     }
    ],
    "source": [
-    "# Fait avec sklearn pour comparer\n",
-    "import os\n",
-    "import numpy as np\n",
-    "from collections import Counter\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.naive_bayes import BernoulliNB\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "\n",
-    "from sklearn import metrics\n",
-    "\n",
-    "\n",
-    "# Training Naive bayes classifier and its variants\n",
-    "# model2 = MultinomialNB()\n",
-    "model2 = BernoulliNB()\n",
-    "model2.fit(extract_feats_train, df_train['Status'])\n",
-    "# Test the unseen mails for Spam\n",
-    "\n",
-    "results2 = model2.predict(extract_feats_test)\n",
-    "print(confusion_matrix(df_test['Status'], results2))\n",
-    "print (metrics.classification_report(df_test['Status'], results2))"
+    "print(\"Metrics and Confusion matrix from the Bernouilli Naive Bayes :\")\n",
+    "print(confusion_matrix(df_test['Status'], prediction_results_bernouilli))\n",
+    "print (metrics.classification_report(df_test['Status'], prediction_results_bernouilli))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
